--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.main-container {
+  display: flex;
+  height: 100vh;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -30,4 +35,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.link {
+  color: #03a9f4;
+  text-decoration: none;
 }
