--- a/src/Components/auth/Auth.css
+++ b/src/Components/auth/Auth.css
@@ -1,11 +1,11 @@
 .auth-form {
-    display: flexbox;
+    align-self: center;
     width: max-content;
     min-width: 300px;
     background-color:rgba(0, 0, 0, 0.3);
     color: #fff;
     border: 1px solid #fff;
-    margin: 10% auto;
+    margin: auto auto;
     padding: 2rem;
     font-family: 'Source Sans Pro', sans-serif;
 }
@@ -20,7 +20,7 @@
     text-decoration: none;
 }
 
-#submit {
+.submit {
     width: 100%;
     height: 2.5rem;
     background-color: #1779ba;
@@ -30,12 +30,12 @@
     border-color: #fff;
 }
 
-#submit:hover {
+.submit:hover {
     background-color: rgba(0, 0, 0, 0.5);
     transition: all 350ms ease;
 }
 
-#submit:active {
+.submit:active {
     color: #000;
     background-color: #fff;
 }
